# nl2api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  CLAUDE.md.old  CODE_OF_CONDUCT.md  CONTRACTS.py  CONTRIBUTING.md  DATASTREAM_REFERENCE.md  Dockerfile  Dockerfile.mcp  ESTIMATES_REFERENCE.md  FUNDAMENTALS_REFERENCE.md  LICENSE  Makefile  README.md  SCREENING_REFERENCE.md  SECURITY.md  STATUS.md  distributed_eval_proposal_gemini.md  docker-compose.yml  pyproject.toml
.claude/agents/: code-reviewer.md  refactor-cleaner.md  tdd-guide.md
.claude/hooks/: format_python.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: accuracy.yml  ci.yml  continuous-eval.yml  labeler.yml  release.yml
config/: otel-collector-config.yaml  prometheus.yml
docs/: ARCHITECTURE.md  DELETION_LOG.md  IMPROVEMENT_PROPOSAL.md  MCP_MIGRATION_PLAN.md  RAG_IMPLEMENTATION_PLAN.md  SPRINT_1_PROGRESS.md  STATUS.md  accuracy-testing.md  architecture-ascii.md  claude-code-plugins.md  database-replication.md  evaluation-data.md  evaluation-test-case-patterns.md  evaluation.md  improvement-proposal.md  rag-evaluation-guide.md  rag-retriever-architecture.md  sprint-1-progress.md  telemetry.md  testing.md  troubleshooting.md
docs/api-reference/: OFFICERS_DIRECTORS_REFERENCE.md
docs/plans/: P0.1-observability.md  P0.3-request-metrics.md  README.md  codebase-separation-plan.md  codebase-standards-audit.md  entity-resolution-edge-cases.md  entity-resolution-improvement.md  entity-resolution-p0.md  entity-service-split.md  eval-01-data-contract.md  eval-03-multi-client-platform.md  eval-04-platform-review.md  eval-05-distributed-workers.md  eval-06-evalkit-extraction.md  eval-08-temporal-data.md  eval-09-model-decoupling.md  eval-09-test-quality.md  eval-gold-data-sources-plan.md  evaluation-data-contract-plan.md  evaluation-platform-review.md  infra-02-deployment.md  infra-03-trace-scorecard-linking.md  infra-04-tempo-exemplars.md  meta-01-release-audit.md  nl2api-01-entity-resolution-bootstrap.md  nl2api-02-entity-resolution-database.md  nl2api-04-mcp-dual-mode.md  nl2api-05-orchestrator-refactor.md  nl2api-06-test-quality.md  observability.md  public-release-audit.md  rag-00-improvements.md  rag-02-sec-edgar-ingestion.md  rag-03-evaluation-design.md  rag-04-evaluation-execution.md  rag-05-sec-evaluation.md  rag-06-improvements.md  rag-06-ingestion-improvements.md  rag-07-azure-search-integration.md  rag-08-openai-embeddings.md  (+9 more)
docs/plans/archive/: entity-resolution-expansion.md  roadmap.md
docs/plans/completed/: 2026-01-21-eval-capability-matrix.md  2026-01-21-meta-roadmap.md  2026-01-21-roadmap.md  2026-01-23-entity-resolution-expansion.md  2026-01-23-entity-resolution-p0.md  2026-01-23-evaluation-data-contract-plan.md  2026-01-23-infra-request-metrics.md  2026-01-23-nl2api-entity-resolution-expansion.md  2026-01-23-public-release-audit.md  2026-01-23-rag-infrastructure.md
scripts/: README.md  analyze_metrics.py  backfill-contextual-prefixes.py  backfill-reembed-openai.py  backfill-reindex-small-to-big.py  backfill_client_type.py  backfill_sec_metadata.py  ci-local.sh  ci-test-changed.sh  db-export.py  db-migrate.py  db-restore.py  db-upload.py  enrich_rag_questions.py  eval-nl2api-batch.py  eval-nl2api.py  eval-rag-baseline-DEPRECATED.py  eval_routing.py  expand_sp500_list.py  gen-economic-indicators.py  gen-enrich-rag-questions.py  gen-eval-data.py  gen-nl-responses.py  gen-sec-rag-answers.py  generate-canonical-rag-fixtures.py  generate_company_mappings.py  generate_economic_indicators.py  generate_eval_data.py  generate_nl_responses.py  generate_rag_eval_dataset.py  generate_sec_rag_answers.py  generate_test_cases.py  index_field_codes.py  ingest-gleif.py  ingest-sec-filings.py  ingest_entities.py  ingest_gleif.py  ingest_sec_edgar.py  ingest_sec_filings.py  load-nl2api-fixtures.py  (+27 more)
scripts/generators/: __init__.py  base_generator.py  comparison_generator.py  complex_generator.py  entity_extraction_generator.py  entity_resolution_generator.py  error_generator.py  lookup_generator.py  routing_generator.py  screening_generator.py  sec_rag_question_generator.py  temporal_generator.py
src/: __init__.py
src/batch/: __init__.py  metrics.py  runner.py
src/cli/: main.py
src/cli/commands/: batch.py  run.py
src/common/: __init__.py
src/common/cache/: __init__.py  (+1 more)
src/contracts/: __init__.py  core.py  evaluation.py  storage.py  tenant.py  worker.py
src/core/: __init__.py  ast_comparator.py  evaluators.py
src/evalkit/: __init__.py  exceptions.py
src/evaluation/: __init__.py
src/mcp_servers/: __init__.py
src/nl2api/: __init__.py  config.py  models.py  orchestrator.py
src/rag/: __init__.py
src/rag_ui/: __init__.py  app.py  config.py  query_handler.py
src/services/: __init__.py
src/services/entity_resolution/: Dockerfile  README.md  __init__.py  __main__.py  config.py  pyproject.toml  resilience.py
src/services/entity_resolution/adapters/: __init__.py  cache.py  database.py
src/services/entity_resolution/core/: __init__.py  extractor.py  models.py  openfigi.py  protocols.py  resolver.py
src/services/entity_resolution/transports/: __init__.py
src/services/entity_resolution/transports/http/: __init__.py  app.py
src/storage/: __init__.py  config.py  factory.py  protocols.py
tests/: __init__.py
tests/accuracy/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_error_handling.py  test_multi_turn.py  test_nl2api_evaluation.py  test_query_flows.py  test_rag_evaluation.py
tests/fixtures/: logic_mismatch.json  multi_tool_call.json  search_products.json  syntax_error.json  type_coercion.json
tests/integration/: __init__.py  conftest.py  estimates_eval_results.json  test_api_contract.py  test_entity_ingestion.py  test_entity_repo.py  test_estimates_full_eval.py  test_estimates_queries.py  test_rag_retrieval.py
tests/unit/: conftest.py  test_ast_comparator.py  test_batch_runner.py  test_evaluators.py
(+552 files in other folders)
