[project]
name = "nl2api"
version = "0.1.0"
description = "Natural Language to API translation system for LSEG financial data APIs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Siddharth Sriram"}
]
keywords = ["nlp", "api", "lseg", "financial-data", "natural-language", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "rapidfuzz>=3.0.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/nl2api"
Repository = "https://github.com/YOUR_USERNAME/nl2api.git"
Issues = "https://github.com/YOUR_USERNAME/nl2api/issues"

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "pydantic-settings>=2.0.0",
]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
mcp-server = [
    # MCP SDK for stdio transport (Claude Desktop compatibility)
    "mcp>=1.0.0",
    # HTTP/SSE transport
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    # Database
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.0.0",
    # Redis cache
    "redis>=5.0.0",
    # Telemetry
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
embeddings = [
    # Local embeddings (sentence-transformers)
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
embeddings-openai = [
    # OpenAI embeddings
    "openai>=1.0.0",
]
rag-ui = [
    # Streamlit chat interface
    "streamlit>=1.29.0",
    # Database
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.0.0",
    # LLM client
    "anthropic>=0.39.0",
    # Local embeddings
    "sentence-transformers>=2.2.0",
]
azure-search = [
    # Azure AI Search SDK
    "azure-search-documents>=11.4.0",
    "azure-core>=1.30.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-json-report>=1.5.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pip-audit>=2.0.0",
    # Include postgres deps in dev
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "pydantic-settings>=2.0.0",
    # Include telemetry deps in dev
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    # Include mcp-server deps in dev
    "mcp>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "redis>=5.0.0",
    # HTTP client for alerts
    "httpx>=0.27.0",
    # RAG UI
    "streamlit>=1.29.0",
    "anthropic>=0.39.0",
    # Azure AI Search
    "azure-search-documents>=11.4.0",
    "azure-core>=1.30.0",
]

[project.scripts]
evalkit = "src.evalkit.cli.main:app"
eval = "src.evalkit.cli.main:app"  # Alias for backwards compatibility
entity-mcp = "src.mcp_servers.entity_resolution.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --ignore=tests/unit/evaluation"
# NOTE: tests/unit/evaluation/ is a legacy duplicate of tests/unit/evalkit/
# Ignoring it prevents running ~600 tests twice
filterwarnings = [
    # Ignore PytestCollectionWarning for data model classes named Test*
    "ignore:cannot collect test class 'TestCase':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestCaseMetadata':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestCaseStatus':pytest.PytestCollectionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402", "N806"]  # E501: line too long, E402: imports not at top, N806: uppercase in function (intentional constants)

[tool.ruff.lint.isort]
known-first-party = ["CONTRACTS", "src"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
