[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entity-resolution-service"
version = "0.1.0"
description = "Entity Resolution Service for financial entity disambiguation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "NL2API Team" }
]
keywords = ["entity-resolution", "financial", "nlp", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
redis = [
    "redis>=5.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "entity-resolution-service[http,redis,mcp]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[project.scripts]
entity-resolution = "src.services.entity_resolution.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/services/entity_resolution"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
